@@ -164,6 +164,28 @@ class ImpTestCase(unittest.TestCase):
     def test_sys_modules_deletion(self):
         self.assertRaises(ZeroDivisionError, __import__, 'test.module_deleter')
 
+    #XXX: this is probably a good test to push upstream to CPython.
+    if hasattr(os, "symlink"):
+        def test_symlinks(self):
+            # Ensure imports work over symlinks.  Did not work in Jython from
+            # 2.1 to 2.5.0, fixed in 2.5.1  See
+            # http://bugs.jython.org/issue645615.
+            sym = test_support.TESTFN+"1"
+            try:
+                os.mkdir(test_support.TESTFN)
+                init = os.path.join(test_support.TESTFN, "__init__.py")
+                fp = open(init, 'w')
+                fp.write("test = 'imported'")
+                fp.close()
+                os.symlink(test_support.TESTFN, sym)
+                module = os.path.basename(sym)
+                module_obj = __import__(module)
+                self.assertEquals(module_obj.test, 'imported')
+ 
+            finally:
+                shutil.rmtree(test_support.TESTFN)
+                test_support.unlink(sym)
+
 def test_main():
     test_support.run_unittest(MislabeledImportTestCase,
                               OverrideBuiltinsImportTestCase,
